# MSU_Metrics_Robustness_Benchmark

./: .gitignore  .gitmodules  MANIFEST.in  NOT.py  README.md  demo.ipynb  demo_scoring.ipynb  lib_demo.ipynb  requirements.txt  score_methods.py  setup.cfg
methods/amifgsm/: run.py
methods/cumulative-uap/: train.py
methods/generative-uap/: train.py
methods/ifgsm/: run.py
methods/korhonen-et-al/: Dockerfile  run.py
methods/madc/: Dockerfile  run.py
methods/mifgsm/: run.py
methods/std-fgsm/: run.py
methods/utils/: evaluate.py  metrics.py  read_dataset.py
models/: models_to_mdtvsfa_1d.pth
res/: amifgsm_maniqa_test.csv  cumulative-uap_maniqa_COCO.npy  cumulative-uap_maniqa_VOC2012.npy  cumulative-uap_maniqa_test.csv  cumulative-uap_meta-iqa_VOC2012.npy  generative-uap_maniqa_COCO.npy  generative-uap_maniqa_VOC2012.npy  generative-uap_maniqa_test.csv  generative-uap_meta-iqa_VOC2012.npy  ifgsm_maniqa_test.csv  korhonen-et-al_maniqa_test.csv  madc_maniqa_test.csv  mifgsm_maniqa_test.csv  std-fgsm_maniqa_test.csv  uap_maniqa_COCO.npy  uap_maniqa_VOC2012.npy  uap_maniqa_test.csv
robustness_benchmark/: NOT.py  __init__.py  interface.py  requirements.txt  score_methods.py
subjects/_init/: Dockerfile
subjects/maniqa/: Dockerfile  config.json  model.py  test.py
test_results/amifgsm/: maniqa.csv
test_results/cumulative-uap/: maniqa.csv
test_results/generative-uap/: maniqa.csv
test_results/ifgsm/: maniqa.csv
test_results/korhonen-et-al/: maniqa.csv
test_results/madc/: maniqa.csv
test_results/mifgsm/: maniqa.csv
test_results/std-fgsm/: maniqa.csv
(+15 files in other folders)
