[metadata]
name = robustness_benchmark
version = 0.0.1
author = Khaled Abud
author_email = khaled.abud@graphics.cs.msu.ru
description = Demo module for MSU IQA/VQA Metrics Robustness Benchmark.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/msu-video-group/MSU_Metrics_Robustness_Benchmark
project_urls =
    Bug Tracker = https://github.com/msu-video-group/MSU_Metrics_Robustness_Benchmark/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = robustness_benchmark
python_requires = >=3.7
install_requires =
    setuptools==59.5.0
    av==10.0.0
    numpy==1.19.5
    pandas==1.1.5
    Pillow==10.0.0
    scikit_image==0.17.2
    scikit_learn==1.3.0
    scipy==1.4.1
    setuptools==59.5.0
    torchvision==0.11.3
    tqdm==4.57.0
    torch>=1.10.2
    opencv_python==4.2.0.32